--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -24,6 +24,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Set up Julia V1
+      uses: actions/checkout@v1.0.0
+      uses: julia-actions/setup-julia@v1
+      with:
+        version: 1
 
     - name: Install dependencies
       run: |
