--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -18,18 +18,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/checkout@v1.0.0
+    - uses: julia-actions/setup-julia@v1
+      with:
+        version: 1
 
     # Install dependencies
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
-    - name: Set up Julia V1
-      uses: actions/checkout@v1.0.0
-      uses: julia-actions/setup-julia@v1
-      with:
-        version: 1
-
+    
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
