--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v1.0.0
     - uses: julia-actions/setup-julia@v1
       with:
-        version: 1.4
+        version: 1
 
     # Install dependencies
     - name: Set up Python 3.7
@@ -32,6 +32,10 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+
+    - name: Install Julia dependencies
+      run: | 
+        julia 'import Pkg; Pkg.add("IJulia"); using IJulia'
 
     # Build the book
     - name: Build the book
