--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ latex:
 execute:
     stderr_output: remove 
     execute_notebooks: cache
-    timeout: 
+    timeout: 1000000 
     allow_errors: true
 
