--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -40,7 +40,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build -W -n --keep-going .
+        jupyter-book build .
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
