--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -31,7 +31,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip install -r webpage/requirements.txt
 
     - name: Install Julia dependencies
       run: | 
