setting up binder

--- a/webpage/_toc.yml
+++ b/webpage/_toc.yml
@@ -6,7 +6,7 @@
 
 - part: Examples
   chapters:
-    - file: ../example-notebooks/ramped_molmer_sorensen
+    - file: example-notebooks/ramped_molmer_sorensen
     #- file: example-notebooks/two_ion_vaet
     #- file: example-notebooks/multi-mode_interactions
 
