setting up binder

--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
+IonSim = "511e77fe-ab93-41f7-8f07-8f89809c6435"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 
