--- a/webpage/_toc.yml
+++ b/webpage/_toc.yml
@@ -1,6 +1,6 @@
 root: intro
 format: jb-book
-sections:
+parts:
 - file: example-notebooks/multi-mode_interactions
   sections:
   - file: example-notebooks/two_ion_vaet
