--- a/webpage/_config.yml
+++ b/webpage/_config.yml
@@ -23,6 +23,7 @@ html:
   use_issues_button: true
   use_edit_page_button: true
   favicon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logo.svg"
+  icon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logo.svg"
 
 sphinx:
   config:
