--- a/webpage/_config.yml
+++ b/webpage/_config.yml
@@ -26,11 +26,15 @@ html:
   icon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logo.svg"
 
 sphinx:
+  extra_extensions:
+  - sphinxext.opengraph
   config:
     html_favicon: small-logo.png
     html_static_path: ['customize']
     html_js_files: ['customize.js']
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+    ogp_image: "https://raw.githubusercontent.com/HaeffnerLab/IonSim.jl-Examples/master/logo3_SM.png"
+    ogp_site_url: "https://examples.ionsim.org"
 
 launch_buttons: 
   thebe: true
