--- a/webpage/_toc.yml
+++ b/webpage/_toc.yml
@@ -1,9 +1,13 @@
 root: intro
 format: jb-book
-chapters:
-- file: tutorial-notebooks/getting_started
-- file: example-notebooks/multi-mode_interactions
-  sections:
-  - file: example-notebooks/two_ion_vaet
-  - file: example-notebooks/ramped_molmer_sorensen
-- file: learn-notebooks/coming_soon
+parts:
+  -caption: Getting Started
+    chapters:
+    - file: tutorial-notebooks/getting_started
+  -caption: Examples
+    chapters:
+    - file: example-notebooks/multi-mode_interactions
+    - file: example-notebooks/two_ion_vaet
+    - file: example-notebooks/ramped_molmer_sorensen
+   -caption: Learn (coming soon)
+    chapters:
