--- a/webpage/_toc.yml
+++ b/webpage/_toc.yml
@@ -9,5 +9,6 @@ parts:
     - file: example-notebooks/multi-mode_interactions
     - file: example-notebooks/two_ion_vaet
     - file: example-notebooks/ramped_molmer_sorensen
-  - caption: Learn (coming soon)
+  - caption: Learn 
     chapters:
+    - file: coming soon
