--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -48,3 +48,9 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./webpage/_build/html
+    - name: Add CNAME
+      run: echo "docs.ionsim.org" > CNAME
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        file_pattern: CNAME
+        branch: gh-pages
