--- a/Project.toml
+++ b/Project.toml
@@ -7,5 +7,11 @@ QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 
 [compat]
-QuantumOptics = "0.8.0"
+FunctionWrappers = "1.1.2"
+NLsolve = "4.5.1"
+OrderedCollections = "1.4.1"
+PolynomialRoots = "1.0.0"
+QuantumOptics = "1"
+QuantumOpticsBase = "0.3.1"
+WignerSymbols = "1.0.0, 2"
 julia = "1.3"
