--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -44,7 +44,7 @@ jobs:
         jupyter-book build webpage
 
     - name: Add CNAME
-      run: echo "ionsim.org" > ./webpage/_build/html/CNAME
+      run: echo "examples.ionsim.org" > ./webpage/_build/html/CNAME
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
