moved logo files to logos folder and changed dir that was locating logo

--- a/webpage/_config.yml
+++ b/webpage/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 title: ""
 author: ""
-logo: logo.svg
+logo: logos/logo.svg
 
 latex:
   latex_documents:
@@ -22,8 +22,8 @@ html:
   use_repository_button: true
   use_issues_button: true
   use_edit_page_button: true
-  favicon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logo.svg"
-  icon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logo.svg"
+  favicon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logos/logo.svg"
+  icon:  "https://github.com/HaeffnerLab/IonSim.jl-Examples/blob/master/webpage/logos/logo.svg"
 
 bibtex_bibfiles:
   - tutorial-notebooks/getting_started.bib
@@ -34,7 +34,7 @@ sphinx:
   extra_extensions:
   - sphinxext.opengraph
   config:
-    html_favicon: small-logo.png
+    html_favicon: logos/small-logo.png
     html_static_path: ['customize']
     html_js_files: ['customize.js']
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
