--- a/webpage/_toc.yml
+++ b/webpage/_toc.yml
@@ -5,42 +5,23 @@ parts:
     chapters:
     - file: tutorial-notebooks/Installation
     - file: tutorial-notebooks/getting_started
-    - file: tutorial-notebooks/Documentation
+    - file: tutorial-notebooks/philosophy
     - file: tutorial-notebooks/patch_notes
     - file: tutorial-notebooks/about_us
     - file: tutorial-notebooks/references 
   - caption: Examples
     chapters:
-    - file: example-notebooks/molmer-sorensen
-    - file: example-notebooks/rabi-flop
-    - file: example-notebooks/RAP
-    - file: example-notebooks/multi-mode_interactions
-    - file: example-notebooks/two_ion_vaet
-    - file: example-notebooks/ramped_molmer_sorensen
-
-# format: jb-book
-# root: intro
-# parts:
-#   - caption: Getting Started
-#     chapters:
-#     - file: tutorial-notebooks/Installation
-#     - file: tutorial-notebooks/getting_started
-#     - file: tutorial-notebooks/patch_notes
-#     - file: tutorial-notebooks/about_us
-#     - file: tutorial-notebooks/references 
-#   - caption: Examples
-#     chapters:
-#     - file: example-notebooks/example-notebook
-#       sections: 
-#       - file: example-notebooks/molmer-sorensen
-#       - file: example-notebooks/rabi-flop
-#       - file: example-notebooks/RAP
-#       - file: example-notebooks/multi-mode_interactions
-#       - file: example-notebooks/two_ion_vaet
-#       - file: example-notebooks/ramped_molmer_sorensen
-#   - caption: Documentation
-#     chapters:
-#     - file: Documentation/Documentation
-#       sections:
-#       - file: something
+    - file: example-notebooks/examples
+      sections: 
+      - file: example-notebooks/molmer-sorensen
+      - file: example-notebooks/rabi-flop
+      - file: example-notebooks/RAP
+      - file: example-notebooks/multi-mode_interactions
+      - file: example-notebooks/two_ion_vaet
+      - file: example-notebooks/ramped_molmer_sorensen
+  - caption: Documentations
+    chapters:
+    - file: documentation-notebooks/Documentation
+      sections:
+      - file: something
 
